# ai-forge

./: .gitignore  README.md  pyproject.toml
docs/: ARTICLE_TEMPLATE.md  CONTENT_MAP.md  MIGRATION_PLAN.md  PUBLISHING.md  ROADMAP.md
drafts/coding/: LangChain with_structured_output：别再只靠提示词要求模型返回 JSON.md
drafts/langgraph/: 03流程控制与交互特性.ipynb  05 | LangGraph Streaming：别只等最终答案，要看见Agent每一步怎么跑.md  06 | 用模型驱动tool loop实现一个最小CityWalk Agent.md  07 | LangGraph Command goto也能干普通条件边的活儿.md  08 | LangGraph Runtime Context：尽量别把运行配置塞进State.md  09 | LangGraph工具调用别裸奔：一条从分类到审计的治理流水线.md  10 | LangGraph接入RAG：别把检索问答全塞进一条链.md  11 | LangGraph子图：别把复杂Agent全塞进一张图.md  12 | LangGraph Supervisor 之 Multi-Agent.md  13 | LangGraph Handoff 之 Multi-Agent.md  LangGraph Send机制：并行分发与Map-Reduce.md
drafts/mcp/: 05 | MCP 消息是怎么传过去的：stdio 与 Streamable HTTP.md  06 | MCP Client 到底在 Host 里做什么.md  06 | 接了多个 MCP Server，Tool 调用到底该发给谁？.md  07 | MCP 调试指南：调用失败，到底该从哪一层查？.md  08 | MCP 输入安全：Tool Schema、SQL 参数绑定与数据最小化.md  09 | MCP Host 权限：模型提出 Tool 调用，不等于获得执行权.md  10 | MCP 执行安全：请求到了 Server，也不等于应该执行.md  11 | MCP 审计安全：日志不是记得越多越好.md  12 | 通过 Streamable HTTP 连接远程 MCP Server.md  13 | MCP 远程授权：Token 从哪里来，又在哪里被验证.md  14 | MCP 工具太多，会不会撑爆模型上下文.md  15 | 手写的AI应用如何调用真实的高德MCP天气工具？.md  mcp_roadmap.md
drafts/sec-for-ai/: 01 | 间接 Prompt Injection：业务数据也可能变成指令.md  02 | Skill 权限绕过：Reference 的路径穿越风险.md  03 | 工具描述投毒：Agent 也会被“自我介绍”带偏.md  sfa_roadmap.md
drafts/skills/: 01 | Skills 不是更长的 Prompt：它在 Agent 里到底负责什么.md  02 | 让 Agent 找到正确 Skill：最小 SKILL.md 的两个关键字段.md  10 | Skill与MCP放在一起是咋协作的.md  (+5 more)
notebooks/: README.md
scripts/: check_repo.py
(+289 files in other folders)
